Introduce initial setup

--- a/app/src/popup/Popup.html
+++ b/app/src/popup/Popup.html
@@ -4,13 +4,13 @@
   <head>
     <title>How long I've been here Mozilla Firefox extension</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="MainPopup.css"/>
+    <link rel="stylesheet" href="Popup.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
 
   <body>
     <div id="root"></div>
-    <script src="MainPopup.js"></script>
+    <script src="Popup.js"></script>
   </body>
 
 </html>
